zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/undefined_assembly_clobbers.zig
export fn foo() void {
    asm volatile("" ::: undefined);
}

// error
//
// :2:25: error: use of undefined value here causes illegal behavior
